# ECSE541FinalProject

./: .gitignore  CMakeLists.txt  README.md  make_and_exec.sh
A2_Part_2_Danilo/: DRAM.cpp  Makefile  bus.cpp  cross_bus_module.cpp  hw_module.cpp  main.cpp  memory.cpp  sw_module.cpp
MNIST/: mnistcpp.cpp  readmnist.c
MurrayAssignment2/: CMakeLists.txt  README.txt  bus_clocked.h  bus_old.h  bus_unclocked.h  hw.h  hw_fullmatrix.h  matmul.cpp  matmul_clocked.cpp  matmul_fullmat_hw.cpp  matmul_no_hw.cpp  memmap.h  memory.h  sw_full_hw.h  sw_hw.h  sw_nohw.h  verify.c
SystemC/Debug/int-SystemC/: SystemC.idb  SystemC.vcxproj.FileListAbsolute.txt
SystemC/Debug/int-SystemC-core/: SystemC-core.idb
SystemC/Debug/int-SystemC-core/SystemC-core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
SystemC/Debug/int-SystemC/SystemC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  SystemC.lastbuildstate
SystemC/Release/int-SystemC-core/SystemC-core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  SystemC-core.lastbuildstate
SystemC/Release/int-SystemC/SystemC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
include/: project_include.h
src/: DRAM.cpp  Makefile  Proj_exec  accelerator_tb.cpp  bus.cpp  bus.h  bus_if.h  cross_bus_module.cpp  eie_accelerator.h  eie_central_control.h  eie_if.h  eie_main.cpp  eie_sw_module.h  hw_module.cpp  main.cpp  memory.cpp  part2_output.txt  sw_module.cpp
